[metadata]
name = PsiTurk
version = attr: psiturk.version.version_number
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
author = NYU Computation and Cognition Lab
author_email = authors@psiturk.org
description = An open platform for science on Amazon Mechanical Turk
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NYUCCL/psiturk

[options]
install_requires =
  Flask_RESTful~=0.3.8
  boto3~=1.26.31
  botocore~=1.29.31
  fuzzywuzzy~=0.18.0
  cmd2~=2.4.2
  psutil~=5.9.4
  Flask_Login~=0.6.2
  gunicorn[gevent]~=20.1.0
  Flask~=2.2.2
  certifi~=2022.12.7
  pytz~=2022.6
  user_agents~=2.2.0
  docopt~=0.6.2
  urllib3~=1.26.13
  Faker~=15.3.4
  requests~=2.28.1
  APScheduler~=3.9.1
  SQLAlchemy~=1.4.45
  pytest~=7.2.0
  future~=0.18.2
  GitPython~=3.1.29
  python-dotenv~=0.21.0
  python_dateutil~=2.8.2
  pyOpenSSL~=22.1.0
  setproctitle~=1.3.2
  python-Levenshtein~=0.20.8
packages=
  psiturk
  psiturk.api
  psiturk.dashboard
include_package_data = True
zip_safe = False
setup_requires =
  pytest-runner

[options.extras_require]
dev =
  sphinx
  sphinx_rtd_theme
  sphinx-server
testing =
  pytest
  ciso8601~=2.1.3
  pytest-mock
  pytest-socket
  pytz

[options.entry_points]
console_scripts =
  psiturk-shell = psiturk.psiturk_shell:run
  psiturk = psiturk.command_line:process
  psiturk-server = psiturk.command_line:process
  psiturk-setup-example = psiturk.command_line:process
  psiturk-heroku-config = psiturk.command_line:process

[aliases]
test=pytest

[testenv]
deps = .[test]

[tool:pytest]
addopts = --disable-socket
